# pecco-lang

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
docs/: codegen.md  driver.md  lexer.md  parser.md  semantic.md
include/: ast.hpp  codegen.hpp  declaration_collector.hpp  error.hpp  lexer.hpp  operator.hpp  operator_resolver.hpp  parser.hpp  scope.hpp  scope_checker.hpp  semantic.hpp  symbol_table.hpp  symbol_table_builder.hpp  token.hpp  type_checker.hpp
src/: CMakeLists.txt  ast.cpp  codegen.cpp  declaration_collector.cpp  driver.cpp  lexer.cpp  operator.cpp  operator_resolver.cpp  parser.cpp  scope.cpp  scope_checker.cpp  semantic.cpp  symbol_table.cpp  symbol_table_builder.cpp  type_checker.cpp
stdlib/: prelude.pec  prelude.pl
tests/: CMakeLists.txt  codegen_tests.cpp  driver_tests.cpp  lexer_tests.cpp  operator_tests.cpp  parser_tests.cpp  semantic_tests.cpp  symbol_table_tests.cpp  type_checker_tests.cpp
tests/fixtures/: error_escape.pl  exit_test.pec  lex_error.pec  numbers.pl  opt_test.pec  parse_error.pl  sample.pec  sample.pl  semantic_error.pec  simple_ir_test.pec
vscode-extension/: README.md  install.sh  package.json
vscode-extension/syntaxes/: pecco.tmLanguage.json
